--- a/jo.html
+++ b/jo.html
@@ -6,46 +6,78 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script>
 			const cName = "canvas"
+			const offset = 50;
 
 			function drawPoly(p1,p2,p3,p4,p5,p6) {
 				canvas = $('#'.concat(cName)).html();
 				points = ''.concat(p1[0],',',p1[1],' ',p2[0],',',p2[1],' ',p3[0],',',p3[1],' ',p4[0],',',p4[1],' ',p5[0],',',p5[1],' ',p6[0],',',p6[1]);
-				poly = '<polygon points="'.concat(points,'" style="fill:lime;stroke:purple;stroke-width:1"/>');
+				poly = '<polygon points="'.concat(points,'" style="fill:rgba(0,255,0,0.5);stroke:purple;stroke-width:1"/>');
 				canvas = canvas.concat(poly);
 				$('#canvas').html(canvas);
 			};
+			
+			function drawGrid(offset) {
+				maxDist = 50
+				canvas = $('#'.concat(cName)).html();
+				line = '<line x1="'.concat(offset,'" y1="', maxDist + offset,'" x2="',offset,'" y2="', -1 * maxDist + offset,'" style="stroke: rgb(255, 0, 0); stroke - width: 2"/>');
+				canvas = canvas.concat(line);
+				line = '<line x1="'.concat(coord(maxDist) + offset,'" y1="', coord(maxDist) + offset,'" x2="',-1 * coord(maxDist) + offset,'" y2="', -1 * coord(maxDist) + offset,'" style="stroke: rgb(255, 0, 0); stroke - width: 2"/>');
+				canvas = canvas.concat(line);
+				line = '<line x1="'.concat(-1 * coord(maxDist) + offset,'" y1="', coord(maxDist) + offset,'" x2="',coord(maxDist) + offset,'" y2="', -1 * coord(maxDist) + offset,'" style="stroke: rgb(255, 0, 0); stroke - width: 2"/>');
+				canvas = canvas.concat(line);
+				line = '<circle cx="'.concat(offset,'" cy="',offset,'" r="',maxDist,'" style="fill:rgba(0,0,255,0.25);stroke:purple;stroke-width:1"/>');
+				canvas = canvas.concat(line);
+				$('#canvas').html(canvas);
+			}
 
 			function clearCanvas() {
 				$('#'.concat(cName)).html('');
+				drawGrid(offset);
+			}
+
+			function coord(d){
+				return((d / Math.sqrt(2)));
 			}
 
 			$(document).ready(function(){
-				drawPoly([100,100],[200,100],[200,200],[300,300],[100,200],[0,0]);
+
+				d1 = parseInt($('#1').val());
+				d2 = parseInt($('#2').val());
+				d3 = parseInt($('#3').val());
+				d4 = parseInt($('#4').val());
+				d5 = parseInt($('#5').val());
+				d6 = parseInt($('#6').val());
+				clearCanvas();
+				drawPoly([offset,d1 + offset],[coord(d2) + offset,coord(d2) + offset],[coord(d3) + offset,-1 * coord(d3) + offset],[0 + offset,-1 * d4 + offset],[-1 * coord(d5) + offset,-1 * coord(d5) + offset],[-1 * coord(d6) + offset,coord(d6) + offset]);
+				
+				$('input').change(function(){
+					d1 = parseInt($('#1').val());
+					d2 = parseInt($('#2').val());
+					d3 = parseInt($('#3').val());
+					d4 = parseInt($('#4').val());
+					d5 = parseInt($('#5').val());
+					d6 = parseInt($('#6').val());
+					clearCanvas();
+					drawPoly([offset,d1 + offset],[coord(d2) + offset,coord(d2) + offset],[coord(d3) + offset,-1 * coord(d3) + offset],[0 + offset,-1 * d4 + offset],[-1 * coord(d5) + offset,-1 * coord(d5) + offset],[-1 * coord(d6) + offset,coord(d6) + offset]);
+				});
+
 			});
 		</script>
 		<style>
 			#canvas{
-				width: 500px;
-				height: 500px;
-				border: 1px solid black;
-				border-radius: 5px;
+				width: 100px;
+				height: 100px;
 			}
 		</style>
 	</head>
 	<body>
 		<div>
-			<input id="p1x" type="range" min="0" max="500"/>
-			<input id="p1y" type="range" min="0" max="500"/><br>
-			<input id="p2x" type="range" min="0" max="500"/>
-			<input id="p2y" type="range" min="0" max="500"/><br>
-			<input id="p3x" type="range" min="0" max="500"/>
-			<input id="p3y" type="range" min="0" max="500"/><br>
-			<input id="p4x" type="range" min="0" max="500"/>
-			<input id="p4y" type="range" min="0" max="500"/><br>
-			<input id="p5x" type="range" min="0" max="500"/>
-			<input id="p5y" type="range" min="0" max="500"/><br>
-			<input id="p6x" type="range" min="0" max="500"/>
-			<input id="p6y" type="range" min="0" max="500"/><br>
+			<input id="1" type="range" min="0" max="50" step="10"/><br>
+			<input id="2" type="range" min="0" max="50" step="10"/><br>
+			<input id="3" type="range" min="0" max="50" step="10"/><br>
+			<input id="4" type="range" min="0" max="50" step="10"/><br>
+			<input id="5" type="range" min="0" max="50" step="10"/><br>
+			<input id="6" type="range" min="0" max="50" step="10"/><br>
 		</div>
 		<svg id="canvas"></svg>
 	</body>
