--- a/jo.html
+++ b/jo.html
@@ -57,7 +57,7 @@
 			$(document).ready(function(){
 
 				updateDraw();
-				$('input').change(function(){
+				$('input').on('input',function(){
 					updateDraw();
 				});
 
